Configuración del contenido estático
Adicion de los componentes JQuery 3.3.1 y Bootstrap 4

--- a/src/main/webapp/static/inicio.html
+++ b/src/main/webapp/static/inicio.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<link href="css/bootstrap.css" rel="stylesheet">
+
+<script type="text/javascript" src="js/jquery-3.3.1.js"></script>
+<script type="text/javascript" src="js/popper.js"></script>
+<script type="text/javascript" src="js/bootstrap.js"></script>
 <title>Pagina de inicio HTML</title>
 </head>
 <body>
 	<div>inicio.html</div>
 	<div>Contenido de la pagina</div>
+	<div><img alt="Spring 5" src="img/Spring_framework.png"></div>
 </body>
 </html>
